unpackaged/main/default/objects/InvoiceLineItem__c/InvoiceLineItem__c.object-meta.xml
<CustomObject>
    <label>Invoice Line Item</label>
    <nameField>
        <label>Invoice Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>