unpackaged/main/default/objects/InvoiceLineItem__c/fields/BusinessType2__c.field-meta.xml
<CustomField>
    <fullName>BusinessType2__c</fullName>
    <label>Business Type (Override)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>