unpackaged/main/default/objects/InvoiceLineItem__c/fields/HardwareMargin__c.field-meta.xml
<CustomField>
    <fullName>HardwareMargin__c</fullName>
    <formula>Invoice__r.HardwareMargin__c * (
	IF(	OR(NetAmount__c=0,Invoice__r.HardwareRevenue__c=0),
		0,
		NetAmount__c/Invoice__r.HardwareRevenue__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hardware Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>