unpackaged/main/default/objects/InvoiceLineItem__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <formula>CASE(ProductType_ro__c,
	"Software", SoftwareMargin__c,
	"Hardware", HardwareMargin__c,
	"Services", ServicesMargin__c,
	"Maintenance", MaintenanceMargin__c,
	OtherMargin__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>