unpackaged/main/default/objects/InvoiceLineItem__c/fields/OtherMargin__c.field-meta.xml
<CustomField>
    <fullName>OtherMargin__c</fullName>
    <formula>Invoice__r.OtherMargin__c * (
	IF(	OR(NetAmount__c=0,Invoice__r.OtherRevenue__c=0),
		0,
		NetAmount__c/Invoice__r.OtherRevenue__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>