unpackaged/main/default/objects/InvoiceLineItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>InvoiceLineItemProduct</relationshipName>
    <type>Lookup</type>
</CustomField>