unpackaged/main/default/objects/InvoiceLineItem__c/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <formula>TEXT(Product__r.Family)</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>