unpackaged/main/default/objects/InvoiceLineItem__c/fields/ProductFamily_ro__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily_ro__c</fullName>
    <label>Product Family (Read Only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>