unpackaged/main/default/objects/InvoiceLineItem__c/fields/SoftwareMargin__c.field-meta.xml
<CustomField>
    <fullName>SoftwareMargin__c</fullName>
    <formula>Invoice__r.SoftwareMargin__c * (
	IF(	OR(NetAmount__c=0,Invoice__r.SoftwareRevenue__c=0),
		0,
		NetAmount__c/Invoice__r.SoftwareRevenue__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Software Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>