unpackaged/main/default/objects/InvoiceLineItem__c/validationRules/Cannot_change_values_after_import.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_values_after_import</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  ISPICKVAL(Invoice__r.IsPostedToSage2__c, "Yes"),
  Invoice__r.UploadedToHitachi__c
/*  (TODAY()-Invoice__r.Date__c) &gt; 1 */
)
&amp;&amp; OR(
  ISCHANGED(Quantity__c),
  ISCHANGED(NetAmount__c),
  ISCHANGED(TaxRate__c)
)</errorConditionFormula>
    <errorMessage>Financial values can no longer be changed.</errorMessage>
</ValidationRule>