unpackaged/main/default/objects/InvoiceLineItem__c/validationRules/Mixed_Business_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Mixed_Business_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Invoice__r.Opportunity__r.Type, "Existing Customer Mixed Business")
&amp;&amp; ISBLANK(TEXT(BusinessType2__c))
&amp;&amp; NOT(ISNEW())</errorConditionFormula>
    <errorDisplayField>BusinessType2__c</errorDisplayField>
    <errorMessage>On mixed business opportunities you must specify the business type for each Invoice Line Item.</errorMessage>
</ValidationRule>